# soildata

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_TESTING.md  TESTING.md  docker-compose.yml  test-local.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  docker-publish.yml
config/: config.yaml  config.yaml.example
grafana/dashboards/: gardening-weather.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: postgres.yml
migrations/: 001_initial.sql  002_add_processing_stats.sql
scripts/: pre-pr-check.sh  setup-test-db.sh
src/: config.rs  error.rs  fetcher.rs  lib.rs  main.rs  parser.rs  scheduler.rs
src/db/: models.rs  repository.rs
tests/: database_integration_test.rs  fetcher_integration_test.rs  parser_integration_test.rs
tests/test_data/: sample_uscrn.txt
