[package]
name = "uscrn-ingest"
version = "0.1.0"
edition = "2021"
description = "NOAA US Climate Reference Network data ingestion service"
authors = ["tgrecojr"]

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dotenvy = "0.15"
scraper = "0.22"
glob = "0.3"
regex-lite = "0.1"
anyhow = "1"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

# Release profile optimizations for smaller binaries
[profile.release]
strip = true         # Strip debug symbols
lto = "thin"         # Link-Time Optimization (thin is faster than full, good size reduction)
codegen-units = 1    # Better optimization at cost of compile time
opt-level = "z"      # Optimize for size
panic = "abort"      # Smaller binary, no unwinding
